<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textAlignment="center" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/faculty"
            android:id="@+id/textViewFaculty"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />
        <Spinner
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settingsFaculty"
            android:spinnerMode="dropdown"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/group"
            android:id="@+id/textViewGroup"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp" />

        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settingsGroup"
            android:hint="@string/settings_hint"
            android:layout_column="1" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/settings_activity_save"
            android:id="@+id/save"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:onClick="onSave"/>

        <Button
            android:text="@string/settings_activity_cancel"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/cancel"
            android:layout_column="1"
            android:onClick="onCancel"/>
    </TableRow>

</TableLayout>