<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/faculty"
            android:id="@+id/textViewFaculty"
            android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="100dp" />
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/fgFaculty"
            android:spinnerMode="dropdown"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/group"
            android:id="@+id/textViewGroup"
            android:layout_column="0"
            android:layout_width="100dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/settings_hint"
            android:id="@+id/fgGroup"
            android:layout_column="1" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showSchedule"
            android:id="@+id/btnShow"
            android:layout_column="0" />
    </TableRow>
</TableLayout>